# Swiss-Utils

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  setup.py
src/py_utils/: forms.py
src/swiss_utils/: __init__.py  console.py  data.py  format.py  forms.py  math.py  py.py  system.py  units.py
src/utils/: __init__.py  config.py  console.py  data.py  format.py  forms.py  math.py  py.py  system.py  units.py
test/: test_console.py  test_data.py  test_format.py  test_forms.py  test_math.py  test_py.py  test_systems.py  test_units.py
