[project]
name = "utils"
version = "1.0.0"
description = "Utilerías varias"
readme = "README.md"
authors = [
    {name = "Gerardo Rodríguez", email = "jerardorch@gmail.com"}
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

